# stl2thumbnail_rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  win32.yml
desktop_integration/: CMakeLists.txt
desktop_integration/gnome/: stl.thumbnailer
desktop_integration/kde/: CMakeLists.txt  stl-thumbnailer.desktop  thumbcreator.cpp
desktop_integration/linux/: .gitignore  CMakeLists.txt
desktop_integration/linux/gnome/: CMakeLists.txt
desktop_integration/win32/: Cargo.toml
desktop_integration/win32/src/: com_interface.rs  generator.rs  lib.rs
include/: stl2thumbnail.h
include/example/: Makefile  main.c  main.cpp
src/: aabb.rs  encoder.rs  ffi.rs  lib.rs  main.rs  mesh.rs  parser.rs  picture.rs  rasterbackend.rs  zbuffer.rs
src/test_models/: triangle.stl  triangle_ascii.stl
stl2thumbnail-win32/: Cargo.toml
stl2thumbnail-win32/src/: generator.rs  lib.rs
stl2thumbnail_rs/: .gitignore  Cargo.toml
stl2thumbnail_rs/include/example/: main.c
stl2thumbnail_rs/src/: aabb.rs  rasterbackend.rs
stl2thumbnail_rs/src/test_models/: triangle_ascii_broken.stl
