[package]
name = "rust"
version = "1.0.0"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2018"

[lib]
name = "stl2thumbnail"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "stl2thumbnail"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
png = "0.16.2"
gif = "0.10.3"
glm = { package = "nalgebra-glm", version = "0.7" }
scan_fmt = "0.2.5"
anyhow = "1.0.28"
byteorder = "1.3.4"