[package]
name = "stl2thumbnail"
version = "1.0.0"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "stl2thumbnail"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
png = "0.16.7"
gif = "0.11.1"
glm = { package = "nalgebra-glm", version = "0.8" }
scan_fmt = "0.2.5"
anyhow = "1.0.33"
byteorder = "1.3.4"

#[profile.release]
#debug = true

#[profile.release]
#panic = "abort"