[package]
name = "stl2thumbnail"
version = "1.0.0"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "stl2thumbnail"
path = "src/main.rs"

[dependencies]
clap = "2.33"
png = "0.16"
gif = "0.11"
glm = { package = "nalgebra-glm", version = "0.9" }
scan_fmt = "0.2"
anyhow = "1.0"
byteorder = "1.4"

[build-dependencies]
cbindgen = "0.16"

#[profile.release]
#debug = true

#[profile.release]
#panic = "abort"